<resources>
    <string name="app_name">FamilySafety</string>
    <string name="sos">SOS</string>
    <string name="guard">Guard</string>
    <string name="security">Security</string>
    <string name="sos_subtitle">In case of emergency, keep telling family member to contact me.</string>
    <string name="guard_subtitle"> Open when you are on potentially dangerous journey</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="my_family">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>