<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".GuardFragment">
    <TextView
        android:id="@+id/title"
        android:text="@string/security"
        android:textSize="@dimen/card_subtitle_textsize"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/text_sos"
        android:text="@string/sos"
        android:textSize="@dimen/card_title_textsize"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_16"
        android:layout_margin="@dimen/dimen_16"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card"/>
    <TextView
        android:id="@+id/text_sos_subtitle"
        android:text="@string/sos_subtitle"
        android:textSize="@dimen/card_subtitle_textsize"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_16"
        android:layout_margin="@dimen/dimen_16"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintEnd_toStartOf="@id/sos_image"
        app:layout_constraintTop_toBottomOf="@id/text_sos"/>
    <TextView
        android:id="@+id/text_guard"
        android:text="@string/guard"
        android:textSize="@dimen/card_title_textsize"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_16"
        android:layout_margin="@dimen/dimen_16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"/>
    <TextView
        android:id="@+id/text_guard_subtitle"
        android:text="@string/guard_subtitle"
        android:textSize="@dimen/card_subtitle_textsize"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_16"
        android:layout_margin="@dimen/dimen_16"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintEnd_toStartOf="@id/guard_image"
        app:layout_constraintTop_toBottomOf="@id/text_guard"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sos_image"
        android:layout_width="@dimen/dimen_96"
        android:layout_height="0dp"
        android:elevation="@dimen/elevation_16"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        android:src="@drawable/ic_sos"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/guard_image"
        android:layout_width="@dimen/dimen_96"
        android:layout_height="0dp"
        android:elevation="@dimen/elevation_16"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        android:src="@drawable/ic_guard"/>
    <com.google.android.material.card.MaterialCardView
        app:cardElevation="@dimen/elevation_15"
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:cardBackgroundColor="@color/red"
        android:layout_margin="@dimen/dimen_16"
        app:cardCornerRadius="@dimen/dimen_16"/>
    <com.google.android.material.card.MaterialCardView
        app:cardElevation="@dimen/elevation_15"
        android:id="@+id/green_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180"
        app:layout_constraintTop_toBottomOf="@+id/pink_card"
        app:cardBackgroundColor="@color/green"
        android:layout_margin="@dimen/dimen_16"
        app:cardCornerRadius="@dimen/dimen_16"/>

</androidx.constraintlayout.widget.ConstraintLayout>